force-app/main/default/objects/Order_Line_Item__c/Order_Line_Item__c.object-meta.xml
<CustomObject>
    <description>Capture order line item information from oracle</description>
    <label>Order Line Item</label>
    <nameField>
        <displayFormat>OL-{0000}</displayFormat>
        <label>Order Line Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>