force-app/main/default/objects/Order_Line_Item__c/fields/Line_Id__c.field-meta.xml
<CustomField>
    <fullName>Line_Id__c</fullName>
    <description>capture line id info from oracle</description>
    <externalId>true</externalId>
    <label>Line Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>