force-app/main/default/objects/Order_Line_Item__c/fields/Oracle_Order_Line_Create_Date__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Order_Line_Create_Date__c</fullName>
    <description>Capture the Date of eery line item</description>
    <label>Oracle Order LineCreate Date</label>
    <type>Date</type>
</CustomField>