force-app/main/default/objects/Order_Line_Item__c/fields/Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Order_Type__c</fullName>
    <description>Captures the order type information</description>
    <label>Order Type</label>
    <length>15</length>
    <type>Text</type>
</CustomField>