force-app/main/default/objects/Order_Line_Item__c/fields/Revenue__c.field-meta.xml
<CustomField>
    <fullName>Revenue__c</fullName>
    <description>capture revenue of every line item from oracle</description>
    <label>Revenue</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>